rename adBlitz -> SkipTubeAds

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdBlitz - Turbocharge Your YouTube Experience</title>
+    <title>SkipTubeAds - Turbocharge Your YouTube Experience</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
@@ -15,7 +15,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="google-site-verification" content="gjQ3HrtdH-D6K9ddRREWOzw-K9HSrJrRMR7mH_phbp4" />
-    <meta name="description" content="AdBlitz enhances your YouTube experience by automatically skipping ads, skimming through non-skippable ads, handling multiple ads seamlessly, and providing a lightweight, hassle-free viewing experience. Download now for Chrome, Firefox, Opera, or other Chromium-based browsers.">
+    <meta name="description" content="SkipTubeAds enhances your YouTube experience by automatically skipping ads, skimming through non-skippable ads, handling multiple ads seamlessly, and providing a lightweight, hassle-free viewing experience. Download now for Chrome, Firefox, Opera, or other Chromium-based browsers.">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -348,12 +348,12 @@
         <div>
             <header class="bg-gray-900 py-4 text-white">
                 <div class="container mx-auto px-4 flex justify-between items-center">
-                    <a href="https://github.com/dikshantrajput/adBlitz" target="__dk" class="text-xl font-bold">
+                    <a href="https://github.com/dikshantrajput/SkipTubeAds" target="__dk" class="text-xl font-bold">
                         <img src="icon.png" class="logo" alt="logo" />
                     </a>
                     <nav>
                         <ul class="flex space-x-4">
-                            <a href="https://github.com/dikshantrajput/adBlitz" target="__dk" class="text-xl font-bold">
+                            <a href="https://github.com/dikshantrajput/SkipTubeAds" target="__dk" class="text-xl font-bold">
                                 <i class="fa-brands fa-github fa-2x"></i>
                             </a>
 
@@ -364,8 +364,8 @@
             <div class="hero-section py-20">
                 <div class="container mx-auto px-4">
                     <div class="flex gap-4">
-                        <h1 class="text-4xl font-bold mb-4">AdBlitz - Your Shortcut to Ad-Free Streaming</h1>
-                        <a href="https://www.producthunt.com/posts/adblitz?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-adblitz" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=454167&theme=light" alt="AdBlitz - Shortcut&#0032;to&#0032;Ad&#0045;Free&#0032;Streaming | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+                        <h1 class="text-4xl font-bold mb-4">SkipTubeAds - Your Shortcut to Ad-Free Streaming</h1>
+                        <!-- <a href="https://www.producthunt.com/posts/adblitz?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-adblitz" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=454167&theme=light" alt="AdBlitz - Shortcut&#0032;to&#0032;Ad&#0045;Free&#0032;Streaming | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a> -->
                     </div>
                     <p class="text-lg font-bold text-yellow-400 mb-8 italic">Not an ad blocker</p>
                     <div class="flex">
@@ -418,7 +418,7 @@
                             <i class="fa-solid fa-forward mr-1"></i>
                             Automatic Skips
                         </h3>
-                        <p>Say goodbye to interruptions as AdBlitz automatically skips skippable ads on YouTube videos.
+                        <p>Say goodbye to interruptions as SkipTubeAds automatically skips skippable ads on YouTube videos.
                         </p>
                         <span class="border-top-animation"></span>
                         <span class="border-right-animation"></span>
@@ -430,7 +430,7 @@
                             <i class="fa-solid fa-fast-forward mr-1"></i>
                             Ad Skimming
                         </h3>
-                        <p>For non-skippable ads, AdBlitz skims through them at an accelerated speed (e.g., 16x), saving
+                        <p>For non-skippable ads, SkipTubeAds skims through them at an accelerated speed (e.g., 16x), saving
                             you valuable time.</p>
                         <span class="border-top-animation"></span>
                         <span class="border-right-animation"></span>
@@ -476,12 +476,12 @@
             </div>
             <div class="video-section py-12">
                 <div class="container mx-auto px-4">
-                    <h2 class="text-3xl font-bold mb-8 text-center">See AdBlitz in Action</h2>
+                    <h2 class="text-3xl font-bold mb-8 text-center">See SkipTubeAds in Action</h2>
                     <div class="video-container mx-auto">
                         <div class="video-wrapper relative pt-[56.25%] shadow-lg rounded-lg overflow-hidden">
                             <iframe class="absolute top-0 left-0 w-full h-full" width="560" height="315" src="https://www.youtube.com/embed/krOcWRMEcyM" frameborder="0"  allowfullscreen></iframe>
                         </div>
-                        <p class="text-center text-gray-400 mt-4">Experience the smooth, ad-free streaming with AdBlitz</p>
+                        <p class="text-center text-gray-400 mt-4">Experience the smooth, ad-free streaming with SkipTubeAds</p>
                     </div>
                 </div>
             </div>
@@ -499,7 +499,7 @@
 <script>
     function downloadExtension(platform) {
         let filePath = 'chrome-installer.zip';
-        let fileName = 'adBlitz.zip';
+        let fileName = 'skiptubeads.zip';
         if (platform === "firefox") {
             filePath = "firefox-installer.zip"
             window.open("https://addons.mozilla.org/en-US/firefox/addon/adblitz/", "__blank")
