--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AdBlitz</title>
+  <title>SkipTubeAds</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>AdBlitz</h1>
+    <h1>SkipTubeAds</h1>
     <p class="ad-count">Total ads skipped: <span id="adCount">0</span></p>
     <p class="ad-count">Total ads speeded: <span id="adSpeed">0</span></p>
     <div class="footer">Made with ❤️ by <a href="https://github.com/dikshantrajput" target="__dk"><span id="name">Dikshant Rajput</span></a></div>
